# spotify-backstage

./: Appkey.hpp  AudioDevice.cpp  AudioDevice.hpp  CMakeLists.txt  Equalizer.cpp  Equalizer.hpp  FilterBank.cpp  FilterBank.hpp  IirFilter.cpp  IirFilter.hpp  Logger.hpp  README.md  SoundSystem.cpp  SoundSystem.hpp  SpotifyBackstage.cpp  SpotifyBackstage.hpp  SpotifySession.cpp  SpotifySession.hpp
